--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
     <h1>Le jeu du Morpion</h1>
+    <div id="menu">
+        <button onclick="initialisating(true)">Mode 1 joueur</button>
+        <button onclick="initialisating(false)">Mode 2 joueur</button>
+
+    </div>
     <div>
         <div id="error"></div>
         <div id="rejouer">
